--- a/HelloRobot/Debug/makefile
+++ b/HelloRobot/Debug/makefile
@@ -8,6 +8,9 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include MapLoader/subdir.mk
+-include Map/subdir.mk
+-include .metadata/.plugins/org.eclipse.cdt.make.core/subdir.mk
 -include subdir.mk
 -include objects.mk
 
